refactor: use common api